--- a/map.html
+++ b/map.html
@@ -22,6 +22,8 @@
       integrity="sha512-BB3hKbKWOc9Ez/TAwyWxNXeoV9c1v6FIeYiBieIWkpLjauysF18NzgR1MBNBXf8/KABdlkX68nAhlwcDFLGPCQ=="
       crossorigin=""
     ></script>
+    <script type="text/javascript" src="intEdu.js"></script>
     <script type="text/javascript" src="map.js"></script>
+
   </body>
 </html>
