--- a/map.html
+++ b/map.html
@@ -23,6 +23,7 @@
       crossorigin=""
     ></script>
     <script type="text/javascript" src="intEdu.js"></script>
+    <script type="text/javascript" src="estados.js"></script>
     <script type="text/javascript" src="map.js"></script>
 
   </body>
