--- a/map.html
+++ b/map.html
@@ -13,7 +13,7 @@
     
     
     <link rel="stylesheet" type="text/css" href="map.css" />
-    <title>Leaflet</title>
+    <title>Irlanda Ordóñez</title>
   </head>
   <body>
     <div id="map"></div>
